...
          MaterialPageRoute(
            builder: (context) => const HofuForm(),
            fullscreenDialog: true,
          ),
        );
      },
      child: const Text('抱負を登録'),
    );
  }
}

class HofuText extends StatelessWidget {
  const HofuText({
...
